tests/NormalTests/paczka1/fuzzy1/95373252.err
Error in line 12: DA8jnLb A627 95,5
Error in line 21: dZ3bwnYe9 A627 46,36
Error in line 18: 8LR S347 16,7
Error in line 22: NRB0X A923 53,1
